--- a/en/html/guide/mem/mem-hex.html
+++ b/en/html/guide/mem/mem-hex.html
@@ -32,7 +32,7 @@
         You can select a range of values by dragging the mouse, <b class="tkeybd">shift-clicking</b> the mouse, or navigating through memory with the keyboard while depressing the <b class="tkeybd">shift</b> key. Values may be copied and pasted using the <b class=menu>|&nbsp;Edit&nbsp;|</b> menu or the associated shortcuts key (<b class="tkeybd">Ctrl-C Ctrl-V,Ctrl-X...</b>); the clipboard can also be transferred into other applications.
       </p>
       <p>
-        Two buttons (<b class="button">Open...</b>, <b class="button">Save..</b>) allow you to load or save data from a file.
+        Two buttons (<b class="button">Open...</b>, <b class="button">Save..</b>) allow you to load or save data from a file. Information on file types can be found in <a href="mem-menu.html">Pop-up menus and files </a>
       </p>
       <p>
         <b>Next:</b> <a href="mem-menu.html">Pop-up menus and files </a>.
