--- a/en/html/guide/mem/mem-menu.html
+++ b/en/html/guide/mem/mem-menu.html
@@ -33,7 +33,7 @@
           <b>Clear Contents:</b>
         </dt>
         <dd>
-            Resets all values in memory to 0 and for RAM to 0 or randomly depending on the parameters in <a href="../opts/index.html">Project options </a>. 
+            Resets all values in RAM to 0 or randomly depending on the parameters in <a href="../opts/index.html">Project options </a>. 
         </dd>
         <dt>
           <b>Load Image...:</b>
