--- a/fr/html/guide/mem/mem-menu.html
+++ b/fr/html/guide/mem/mem-menu.html
@@ -33,13 +33,13 @@
           <b>Effacer le contenu: </b>
         </dt>
         <dd>
-          Réinitialise les ROM à 0 et pour les RAM à 0 ou aléatoirement selon les paramètres dans <a href="../opts/index.html">Les options de projet</a>. 
+          Réinitialise toutes les valeur des RAM avec des 0 ou aléatoirement selon les paramètres dans <a href="../opts/index.html">Les options de projet</a>. 
         </dd>
         <dt>
           <b>Charger l'image ...: </b>
         </dt>
         <dd>
-          Réinitialise toutes les valeurs en mémoire en fonction des valeurs trouvées dans un fichier. Le format du fichier est reconnu automatiquement et si ce n'est pas le cas une fenêtre s'ouvre pour une sélection appropriée.
+          Réinitialise toutes les valeurs en mémoire en fonction des valeurs trouvées dans un fichier. Le format du fichier est reconnu automatiquement et si ce n'est pas le cas le <a href="mem-filepanel.html">Panneau du fichier mémoire</a>  s'ouvre pour une sélection appropriée.
         </dd>
         <dt>
           <b>Sauvegarder l'image ...: </b>
