--- a/fr/html/guide/mem/mem-v3word.html
+++ b/fr/html/guide/mem/mem-v3word.html
@@ -50,7 +50,7 @@ v3.0 hex words addressed
         v3.0 hex words addressed
       </h1>
       <p>
-        Ce format est identique au précédent avec les mêmes caractéristiques. En plus une indication de l'adresse au début des lignes. L'adresse est donnée en hexadécimale et suivit du caractère <b>:</b>
+        Ce format est identique au précédent avec les mêmes caractéristiques. En plus une indication de l'adresse au début des lignes. L'adresse est donnée en hexadécimale et suivit du caractère "<b>:</b>"
       </p>
 	  <p>
 	    <blockquote>
