--- a/ru/html/guide/prefs/index.html
+++ b/ru/html/guide/prefs/index.html
@@ -20,7 +20,7 @@
         Logisim поддерживает две категории параметров конфигурации: <em>настройки приложения</em> и <em>параметры проекта</em>. Настройки приложения охватывают все открытые проекты, а параметры проекта специфичны для одного определённого проекта. В этом разделе рассматриваются настройки приложения; <a href="../opts/index.html">параметры проекта</a> описаны в другом разделе.
       </p>
       <p>
-        Вы можете просматривать и редактировать настройки приложения через пункт Настройки... из меню Файл (или из меню Logisim на Mac OS); появится окно с несколькими вкладками. Мы будем обсуждать эти вкладки по отдельности, а потом мы посмотрим, как настройки могут быть заданы с помощью командной строки.
+        Вы можете просматривать и редактировать настройки приложения через пункт <b class=menu>|&nbsp;Настройки...|&nbsp;</b> из меню <b class=menu>|&nbsp;Файл&nbsp;|</b> (или из меню Logisim на Mac OS); появится окно с несколькими вкладками. Мы будем обсуждать эти вкладки по отдельности, а потом мы посмотрим, как настройки могут быть заданы с помощью командной строки.
       </p>
       <blockquote>
         <a href="pref-template.html">Вкладка Шаблон</a><br>
