--- a/fr/html/libs/index.html
+++ b/fr/html/libs/index.html
@@ -21,7 +21,7 @@
         plus importants, tels que l'outil pousser (<img class="icontxt" src="../../../icons/1616/toolpoke.png" alt="#########">) et l'outil de sélection (<img class="icontxt" src="../../../icons/1616/toolselect.png" alt="#########">), vous permettent d'interagir avec les composants.
       </p>
       <p>
-        Fréquemment, lorsque le composant est sélectionné ou ajouté, <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> permet de modifier son attribut <b class="property">Largeur de données</b>. L'utilisation rapide des touches permet la saisie de plus grande valeur par exemple: <b class=
+        Fréquemment, lorsque le composant est sélectionné ou ajouté, le touches <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifient son attribut <b class="property">Largeur de données</b>. L'utilisation rapide des touches permet la saisie de plus grande valeur par exemple: <b class=
         "tkeybd">ALT-1 ALT-2</b> donne 12.
       </p>
       <p>
