--- a/fr/html/libs/mem/flipflops.html
+++ b/fr/html/libs/mem/flipflops.html
@@ -444,7 +444,7 @@
         Comportement de l'outil text
       </h2>
       <p>
-        Permet de modifier l'étiquette associée au composant.
+        Permets de modifier l'étiquette associée au composant.
       </p>
       <p>
         <b>Retour à</b> <a href="../index.html#hlibmem">Référence de la bibliothèque</a>
