--- a/fr/html/libs/wiring/constant.html
+++ b/fr/html/libs/wiring/constant.html
@@ -62,7 +62,7 @@
         Attributs
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, les touches de <b class="tkeybd">0</b> à <b class="tkeybd">9</b> et de <b class="tkeybd">a</b> à <b class="tkeybd">f</b> modifie l'attribut <b class="property">Valeur</b>. <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifie l'attribut <b class="property">Largeur de donnée</b> et les touches fléchées modifient son attribut <b class="property">Orientation</b>.
+        Lorsque le composant est sélectionné ou ajouté, les touches de <b class="tkeybd">0</b> à <b class="tkeybd">9</b> et de <b class="tkeybd">a</b> à <b class="tkeybd">f</b> modifient l'attribut <b class="property">Valeur</b>. les touches <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifient l'attribut <b class="property">Largeur de donnée</b> et les touches fléchées modifient son attribut <b class="property">Orientation</b>.
       </p>
 	  <div class="attliste">
       <dl>
