--- a/fr/html/libs/wiring/extender.html
+++ b/fr/html/libs/wiring/extender.html
@@ -91,7 +91,7 @@
         Attributs
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, <b class="tkeybd">0</b> à <b class="tkeybd">9</b> modifie l'attribut <b class="property">Entrée : Largeur donnée</b>,<b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifie l'attribut <b class="property">Sortie : Largeur donnée</b>.
+        Lorsque le composant est sélectionné ou ajouté, Les touches <b class="tkeybd">0</b> à <b class="tkeybd">9</b> modifient l'attribut <b class="property">Entrée : Largeur donnée</b>, les touches <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifient l'attribut <b class="property">Sortie : Largeur donnée</b>.
       </p>
       <div class="attliste">
         <dl>
