--- a/fr/html/libs/wiring/notconnect.html
+++ b/fr/html/libs/wiring/notconnect.html
@@ -60,7 +60,7 @@
         Attributes
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifie l'attribut <b class="property">Largeur de données</b>.
+        Lorsque le composant est sélectionné ou ajouté, Les touches <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifient l'attribut <b class="property">Largeur de données</b>.
       </p>
       <div class="attliste">
         <dl>
