--- a/fr/html/libs/wiring/splitter.html
+++ b/fr/html/libs/wiring/splitter.html
@@ -105,7 +105,7 @@
         Attributs
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, les chiffres <b class="tkeybd">0</b> à <b class="tkeybd">9</b> modifient l'attribut <b class="property">Terminaisons</b> et <b class="property">Largeur faisceaut</b> et les touches fléchées modifient l'attribut <b class="property">Orientation</b>.
+        Lorsque le composant est sélectionné ou ajouté, les chiffres <b class="tkeybd">0</b> à <b class="tkeybd">9</b> modifient l'attribut <b class="property">Terminaisons</b> et <b class="property">Largeur faisceau</b> et les touches fléchées modifient l'attribut <b class="property">Orientation</b>.
       </p>
 	  	  <div class="attliste">
       <dl>
