--- a/fr/html/libs/wiring/transmis.html
+++ b/fr/html/libs/wiring/transmis.html
@@ -218,7 +218,7 @@
         Attributs
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifie l'attribut <b class="property">Largeur de donnée</b>, et les touches fléchées modifient son attribut <b class="property">Orientation</b>.
+        Lorsque le composant est sélectionné ou ajouté, les touches <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifient l'attribut <b class="property">Largeur de donnée</b>, et les touches fléchées modifient son attribut <b class="property">Orientation</b>.
       </p>
       <div class="attliste">
       <dl>
