--- a/fr/html/libs/gates/xor.html
+++ b/fr/html/libs/gates/xor.html
@@ -526,7 +526,7 @@
         Comportement de l'outil text
       </h2>
       <p>
-        Permet de modifier l'étiquette associée à la porte.
+        Permets de modifier l'étiquette associée à la porte.
       </p>
       <p>
         <b>Retour à</b> <a href="../index.html">Référence de la bibliothèque</a>
