--- a/fr/html/libs/wiring/tunnel.html
+++ b/fr/html/libs/wiring/tunnel.html
@@ -74,7 +74,7 @@
         Attributs
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifie son attribut <b class="property">Largeur de donnée</b> et les touches fléchées modifient son attribut <b class="property">Orientation</b> .
+        Lorsque le composant est sélectionné ou ajouté, les touches <b class="tkeybd">Alt-0</b> à <b class="tkeybd">Alt-9</b> modifient son attribut <b class="property">Largeur de donnée</b> et les touches fléchées modifient son attribut <b class="property">Orientation</b> .
       </p>
 	   <div class="attliste">
       <dl>
