--- a/fr/html/libs/wiring/pin.html
+++ b/fr/html/libs/wiring/pin.html
@@ -185,7 +185,8 @@
         </h2>
         <p>
           Cliquer sur une broche de sortie n’a aucun effet, bien que les attributs de la broche soient affichés.
-        </p>Selon la base utilisée pour l'affichage des valeurs de la broche, le comportement n'est pas le même.
+        </p>
+		<p> Selon la base utilisée pour l'affichage des valeurs de la broche, le comportement n'est pas le même.
         <ul>
           <li>
             <b>Binaire :</b>
@@ -198,6 +199,7 @@
             <b>Décimal, Flottant :</b>
           </li>Un écran de saisie apparait pour entrer une valeur. Pour les valeurs décimales, il est possible de saisir la valeur flottante U. Pour les valeurs en virgule flottante, il n'est pas possible de saisir cette valeur.
         </ul>
+		</p>
         <p>
           Si, toutefois, l’utilisateur visualise l’état d’un sous-circuit comme décrit dans le <a href="../../guide/subcirc/sub-debug.html">débogage de Sous-circuits</a> du <em>Guide de l'utilisateur</em> , alors la valeur de la pin est pilotée par la valeur que le sous-circuit reçoit du circuit de hiérarchie supérieur. L'utilisateur ne peut pas modifier la valeur sans rompre ce lien entre l'état du sous-circuit et l'état du circuit contenant, et Logisim demandera à l'utilisateur de vérifier que la rupture de ce lien est réellement souhaitée.
         </p>
