--- a/en/html/libs/wiring/pin.html
+++ b/en/html/libs/wiring/pin.html
@@ -170,7 +170,7 @@
 			Binary: <b>1010<sub>b</sub></b><br>
 			Octal: <b>12<sub>o</sub></b><br>
 			Signed decimal: <b>-6<sub>s</sub></b><br>
-			Unsigned deciaml: <b>10<sub>u</sub></b><br>
+			Unsigned decimal: <b>10<sub>u</sub></b><br>
 			Hexadecimal: <b>A<sub>h</sub></b><br>
 			Float: <b>1.4E-44<sub>f</sub> </b> Only in 32 or 64 bits of 1 or 0. Otherwise presents the value <b>NaN<sub>f</sub></b>
 		  </blockquote>
@@ -190,9 +190,20 @@
         Clicking an output pin has no effect, although the pin's attributes will be displayed.
       </p>
       <p>
-        Clicking an input pin will toggle the bit that is clicked. If it is a three-state pin, then the corresponding bit will rotate between the three states.<br>
-		If the base is float a small input screen will be displayed.
-      </p>
+        Depending on the basis used to display spindle values, the behavior is not the same.
+       <ul>
+          <li>
+            <b>Binary:</b>
+          </li>If you click on one of the bits, it will change value, and if it's a tristate pin, the bit will rotate between the three values. A red marker indicates the location of the last change.<br>
+          You can also use the keyboard: 0,1,U to define the state of the bit under the cursor.
+          <li>
+            <b>Octal, Hexadecimal:</b>
+          </li>If you click on one of the digits, it will increment by 1 and loop back beyond 7 or f as appropriate. If it's a tri-state pin, it will also go through the U state. You can use the keyboard: 0..7,U or 0..f,U to define the state of the bit under the cursor. If the data width is not a multiple of three/four, then the most significant digit will only allow the possible values for the available bits.
+          <li>
+            <b>Decimal, Float :</b>
+          </li>An input screen appears for entering a value. For decimal values, it is possible to enter the floating-point value U. For floating-point values, it is not possible to enter this value.
+        </ul>
+		</p>
       <p>
         If, however, the user is viewing the state of a subcircuit as described in the `<a href="../../guide/subcirc/sub-debug.html">Debugging Subcircuits</a>' of the <em>User's Guide</em>, then the pin's value is pinned to whatever value the subcircuit is receiving from the containing circuit. The user cannot change the value without breaking this link between the subcircuit's state and the containing circuit's state, and Logisim will prompt the user to verify that breaking this link is actually desired.
       </p>
