--- a/libstatus.html
+++ b/libstatus.html
@@ -129,7 +129,7 @@
 		<td align="left"></td>
 		<td align="left">Pin</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/libs/wiring/pin.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/wiring/pin.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/wiring/pin.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/wiring/pin.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/wiring/pin.html">_C</a></td>
