--- a/docstatus.html
+++ b/docstatus.html
@@ -872,9 +872,9 @@
 		<td align="left"></td>
         <td align="center" class="good"><a href="./en/html/guide/mem/mem-poke.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-poke.html">__</a></td>
-		<td align="center" class="needtask"><a href="./de/html/guide/mem/mem-poke.html">_A</a></td>
-		<td align="center" class="needtask"><a href="./pt/html/guide/mem/mem-poke.html">_A</a></td>
-		<td align="center" class="needtask"><a href="./ru/html/guide/mem/mem-poke.html">_A</a></td>
+		<td align="center" class="obsolete"><a href="./de/html/guide/mem/mem-poke.html">_A</a></td>
+		<td align="center" class="obsolete"><a href="./pt/html/guide/mem/mem-poke.html">_A</a></td>
+		<td align="center" class="obsolete"><a href="./ru/html/guide/mem/mem-poke.html">_A</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
