--- a/en/html/guide/mem/mem-hex.html
+++ b/en/html/guide/mem/mem-hex.html
@@ -26,7 +26,26 @@
         The numbers in italics at left display memory addresses, written in hexadecimal. The other numbers display values starting from that memory address; the hex editor may display four, eight, or sixteen values per line, depending on what fits in the window. To help with counting, each group of four values has a larger space between.</p>
       </p>
       <p>
-        You can navigate through memory using the scroll bar or using the keyboard (the <b class="tkeybd">arrow keys, home, end, page up, and page down</b>). Typing hexadecimal characters will alter the currently selected value.
+        You can navigate through memory using the scroll bar or using the keyboard.Typing hexadecimal characters will alter the currently selected value.
+		<ul>
+        <li>The <b class="tkeybd">Down Arrow</b> or <b class="tkeybd">Enter</b> key will scroll down one line.
+        </li>
+        <li>The <b class="tkeybd">Up Arrow</b> or <b class="tkeybd">Ctrl+Enter</b> key will scroll up one line.
+        <li>The <b class="tkeybd">mouse wheel</b> is used for the same scrolling functions.
+        </li>
+        <li> The <b class="tkeybd">Right Arrow</b> or <b class="tkeybd">Space</b> keys will scroll one box to the right.
+        </li>
+        <li> The <b class="tkeybd">Left Arrow</b> or <b class="tkeybd">Backspace</b> keys will scroll one box to the left.
+        </li>
+		<li> The <b class="tkeybd">Page Down</b> or <b class="tkeybd">Ctrl+Space</b> keys will scroll down one page.
+        </li>
+		<li> The <b class="tkeybd">Page Up</b> or <b class="tkeybd">Ctrl+Return</b> keys will scroll up one page.
+        </li>
+		<li>The <b class="tkeybd">Home</b> and <b class="tkeybd">End</b> move the cursor to the beginning or end of the document.
+        </li>
+		<li>The <b class="tkeybd">Del</b> resets the selected cell with a zero.
+        </li>
+      </ul>
       </p>
       <p>
         You can select a range of values by dragging the mouse, <b class="tkeybd">shift-clicking</b> the mouse, or navigating through memory with the keyboard while depressing the <b class="tkeybd">shift</b> key. Values may be copied and pasted using the <b class=menu>|&nbsp;Edit&nbsp;|</b> menu or the associated shortcuts key (<b class="tkeybd">Ctrl-C Ctrl-V,Ctrl-X...</b>); the clipboard can also be transferred into other applications.
