--- a/fr/html/guide/mem/mem-hex.html
+++ b/fr/html/guide/mem/mem-hex.html
@@ -26,7 +26,28 @@
         Les chiffres en italique dans la colonne de gauche affichent les adresses mémoire en hexadécimal. Les autres nombres affichent la valeur des cellules à partir de cette adresse mémoire. L'éditeur hexadécimal peut afficher quatre, huit ou seize valeurs par ligne, en fonction la largeur de la fenêtre. Pour faciliter la visualisation et la lecture, ils sont regroupés par quatre avec un espace entre les groupes.
       </p>
       <p>
-        Il est possible de naviguer dans la mémoire à l'aide de la barre de défilement ou du clavier (les touches <b class="tkeybd">fléchées, accueil, fin, page précédente et page suivante</b>). La saisie de caractères hexadécimaux modifiera la valeur de la cellule sélectionnée.
+        Il est possible de naviguer dans la mémoire à l'aide de la barre de défilement ou du clavier.  La saisie de caractères hexadécimaux modifiera la valeur de la cellule sélectionnée.
+		 <ul>
+        <li>Les touches <b class="tkeybd">Flèche bas</b> ou <b class="tkeybd">Entrée</b> feront défiler d'une ligne vers le bas.
+        </li>
+        <li>Les touches <b class="tkeybd">Flèche haut</b> ou <b class="tkeybd">Ctrl+Entrée</b> feront défiler d'une ligne vers le haut.
+        </li>
+        <li>La <b class="tkeybd">molette de souris</b> permet ce même défilement.
+        </li>
+        <li>Les touches <b class="tkeybd">Flèche droite</b> ou <b class="tkeybd">Espace</b> feront défiler d'une case à droite.
+        </li>
+        <li>Les touches <b class="tkeybd">Flèche gauche</b> ou <b class="tkeybd">Retour arrière</b> feront défiler d'une case à gauche.
+        </li>
+		<li>Les touches <b class="tkeybd">Page bas</b> ou <b class="tkeybd">Ctrl+Espace</b> feront défiler d'une page vers le bas.
+        </li>
+		<li>Les touches <b class="tkeybd">Page haut</b> ou <b class="tkeybd">Ctr+Retour arrière</b> feront défiler d'une page vers le haut.
+        </li>
+		<li>Les touches <b class="tkeybd">Home</b> et <b class="tkeybd">End</b> pemetent de déplacer le curseur au début ou a la fin du document.
+        </li>
+		<li>La touche <b class="tkeybd">Del</b> réinitialise la cellule sélectionnée avec un zéros.
+        </li>
+      </ul>
+	  
       </p>
       <p>
         Vous pouvez sélectionner une plage de valeurs en faisant <b class="tkeybd">clic-droit</b> et glisser la souris ou en naviguant dans la mémoire avec le clavier tout en appuyant sur la touche <b class="tkeybd">Maj</b>.<br>
