--- a/fr/html/guide/mem/mem-poke.html
+++ b/fr/html/guide/mem/mem-poke.html
@@ -35,13 +35,15 @@
       <ul>
         <li>Si vous entrez une valeur hexadécimale, l'éditeur se positionnera à l'adresse demandée.
         </li>
-        <li>La touche <b class="tkeybd">Entrée</b> ou <b class="tkeybd">Flèche bas</b> fera défiler d'une adresse vers le bas.
+        <li>Les touches <b class="tkeybd">Flèche bas</b> ou <b class="tkeybd">Entrée</b> feront défiler d'une ligne vers le bas.
         </li>
-        <li>La touche <b class="tkeybd">Retour arrière</b> ou <b class="tkeybd">Flèche haut</b> fera défiler d'une adresse vers le haut.
+        <li>Les touches <b class="tkeybd">Flèche haut</b> ou <b class="tkeybd">Ctrl+Entrée</b> feront défiler d'une ligne vers le haut.
         </li>
-        <li>La <b class="tkeybd">molette de souris</b> permet ce même défilement.
+        <li>La <b class="tkeybd">molette de souris</b> permet ces mêmes défilements.
         </li>
-        <li>La touche <b class="tkeybd">Espace</b> ou <b class="tkeybd">Ctrl Flèche bas</b> descend d'une page.
+		<li>Les touches <b class="tkeybd">Page bas</b> ou <b class="tkeybd">Ctrl+Espace</b> ou <b class="tkeybd">Espace</b> feront défiler d'une page vers le bas.
+        </li>
+		<li>Les touches <b class="tkeybd">Page haut</b> ou <b class="tkeybd">Retour arrière</b> <b class="tkeybd">Ctrl + Retour arrière</b> feront défiler d'une page vers le haut.
         </li>
       </ul>
       <h2>
@@ -54,16 +56,26 @@
         <img class="notscal" src="../../../../img-guide/pokememdata.png" alt="pokememdata">
       </p>
       <p>
-        Vous pouvez ensuite saisir la valeur de la cellule mémoire en hexadécimale.
+        Vous pouvez ensuite saisir la valeur de la cellule mémoire sélectionné en hexadécimale.
       </p>
       <ul>
-        <li>La touche <b class="tkeybd">Entrée</b> ou <b class="tkeybd">Flèche bas</b> fera défiler d'une adresse vers le bas.
+        <li>Les touches <b class="tkeybd">Flèche bas</b> ou <b class="tkeybd">Entrée</b> feront défiler d'une ligne vers le bas.
         </li>
-        <li>La touche <b class="tkeybd">Retour arrière</b> ou <b class="tkeybd">Flèche haut</b> fera défiler d'une adresse vers le haut.
+        <li>Les touches <b class="tkeybd">Flèche haut</b> ou <b class="tkeybd">Ctrl+Entrée</b> feront défiler d'une ligne vers le haut.
         </li>
         <li>La <b class="tkeybd">molette de souris</b> permet ce même défilement.
         </li>
-        <li>La touche <b class="tkeybd">Espace</b> ou <b class="tkeybd">Ctrl Flèche bas</b> descend d'une page.
+        <li>Les touches <b class="tkeybd">Flèche droite</b> ou <b class="tkeybd">Espace</b> feront défiler d'une case à droite.
+        </li>
+        <li>Les touches <b class="tkeybd">Flèche gauche</b> ou <b class="tkeybd">Retour arrière</b> feront défiler d'une case à gauche.
+        </li>
+		<li>Les touches <b class="tkeybd">Page bas</b> ou <b class="tkeybd">Ctrl+Espace</b> feront défiler d'une page vers le bas.
+        </li>
+		<li>Les touches <b class="tkeybd">Page haut</b> ou <b class="tkeybd">Ctr+Retour arrière</b> feront défiler d'une page vers le haut.
+        </li>
+		<li>La touche <b class="tkeybd">R</b> réinitialise l'ensemble de la mémoire avec des zéro ou aléatoirement selon les paramètres du projet ...
+        </li>
+		<li>La touche <b class="tkeybd">Del</b> réinitialise la cellule sélectionnée avec un zéros.
         </li>
       </ul>
       <p>
