--- a/en/html/guide/mem/mem-poke.html
+++ b/en/html/guide/mem/mem-poke.html
@@ -35,13 +35,15 @@
       <ul>
         <li>Typing hexadecimal digits will change the top address accordingly.
         </li>
-        <li>Typing the <b class="tkeybd">Enter key</b> or <b class="tkeybd">Ctrl+Down arrow</b> will scroll down one line.
+        <li>The <b class="tkeybd">Down Arrow</b> or <b class="tkeybd">Enter</b> key will scroll down one line.
         </li>
-        <li>Typing the <b class="tkeybd">Back space</b> or <b class="tkeybd">Ctrl+Up arrow</b> will scroll Up one line.
+        <li>The <b class="tkeybd">Up Arrow</b> or <b class="tkeybd">Ctrl+Enter</b> key will scroll up one line.
         </li>
-        <li>The <b class="tkeybd">mouse wheel</b> allows this same scrolling.
+		<li>The <b class="tkeybd">mouse wheel</b> is used for the same scrolling functions.
         </li>
-        <li>Typing the <b class="tkeybd">space bar</b> will scroll down one page.
+        <li>The <b class="tkeybd">Page Down</b> or  <b class="tkeybd">Space</b> key will scroll down one page.
+        </li>
+        <li>The <b class="tkeybd">Page Up</b> or  <b class="tkeybd">Ctrl+Backspace</b> key will scroll up one page.
         </li>
       </ul>
       <h2>
@@ -54,15 +56,22 @@
         <img class="notscal" src="../../../../img-guide/pokememdata.png" alt="pokememdata">
       </p>
       <ul>
-        <li>Typing hexadecimal digits will change the value at the address currently being edited.
+        <li>The <b class="tkeybd">Down Arrow</b> or <b class="tkeybd">Enter</b> key will scroll down one line.
         </li>
-        <li>The <b class="tkeybd">Enter key</b> or <b class="tkeybd">Ctrl+Down arrow</b> will scroll the cursor down one line.
+        <li>The <b class="tkeybd">Up Arrow</b> or <b class="tkeybd">Ctrl+Enter</b> key will scroll up one line.
+        <li>The <b class="tkeybd">mouse wheel</b> is used for the same scrolling functions.
         </li>
-        <li>The <b class="tkeybd">Backspace key</b> or <b class="tkeybd">Ctrl+Left Arrow</b> will scroll the cursor one cell backwards.
+        <li> The <b class="tkeybd">Right Arrow</b> or <b class="tkeybd">Space</b> keys will scroll one box to the right.
         </li>
-        <li>The <b class="tkeybd">Space key</b> or <b class="tkeybd">Ctrl+Right Arrow</b> will scroll the cursor one cell forward.
+        <li> The <b class="tkeybd">Left Arrow</b> or <b class="tkeybd">Backspace</b> keys will scroll one box to the left.
         </li>
-        <li>The <b class="tkeybd">Mouse wheel</b> or <b class="tkeybd">Ctrl+Up arrow</b>, will scroll the cursor up a line.
+		<li> The <b class="tkeybd">Page Down</b> or <b class="tkeybd">Ctrl+Space</b> keys will scroll down one page.
+        </li>
+		<li> The <b class="tkeybd">Page Up</b> or <b class="tkeybd">Ctrl+Return</b> keys will scroll up one page.
+        </li>
+		<li>The <b class="tkeybd">R</b> resets the entire memory with zeros or randomly according to project parameters.
+        </li>
+		<li>The <b class="tkeybd">Del</b> resets the selected cell with a zero.
         </li>
       </ul>
       <p>
