French tipo correction

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a href="./de/html/libs/index.html">Library Reference DE Bibliotheksreferenz</a><br><br>
 <a href="./pt/html/libs/index.html">Library Reference PT Referências para bibliotecas</a><br><br>
 <a href="./ru/html/libs/index.html">Library Reference RU Library Reference RU</a><br><br>
-<a href="./ru/html/libs/index.html">Library Reference HE </a><br><br>
+<a href="./he/html/libs/index.html">Library Reference HE </a><br><br>
 <h2>
   Documentation resources
 </h2>
