--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="./de/html/guide/index.html">User Guide DE  Der Leitfaden für Logisim-Anwender </a><br><br>
 <a href="./pt/html/guide/index.html">User Guide PT  Guia para se tornar usuário do Logisim-evolution</a><br><br>
 <a href="./ru/html/guide/index.html">User Guide RU  Руководство "Как стать пользователем Logisim-evolution" </a><br><br>
-<a href="./ru/html/guide/index.html">User Guide HE  המדריך למשתמש של Logisim-evolution  </a><br><br>
+<a href="./he/html/guide/index.html">User Guide HE  המדריך למשתמש של Logisim-evolution  </a><br><br>
 <h2>
   <a href="./libstatus.html">Library libs Status</a><br>
 </h2>
